# Alpha-RL-Research

./: .gitignore  README.ZH.md  README.md  begin_research.bash  convert_blog_rednote.bash  pyproject.toml  requirements.txt  research_config.example.jsonc  research_opencode.example.json  test_blueprint_runner.bash  test_ssh_connection.bash  tmux_wait.py
alpha_auto_research/: cli.py  cli_general.py  config.py  general_runner.py  opencode_runner.py
alpha_auto_research/blueprint_runner/: base.py  blueprint_runner.py  pai_runner.py  scan_jobs.py  ssh_runner.py  stop_jobs.py
alpha_auto_research/experiment_worker/: base.py
alpha_auto_research/pai/: client.py
alpha_auto_research/skills/: leader_experiment.md  leader_experiment.no_human.md  worker_experiment.md
alpha_auto_research/skills/banana_image/: banana_image_generate.md
alpha_auto_research/skills/leader_experiment/: SKILL.md
alpha_auto_research/skills/leader_experiment_no_human/: SKILL.md
alpha_auto_research/skills/worker_experiment/: SKILL.md
alpha_auto_research/skills/writing/rednote/: SKILL.md
alpha_auto_research/skills/writing/rednote_cover/: SKILL.md
alpha_auto_research/utils/: install_skills.py  pty.py  smart_daemon.py
docs/: index.md
docs/articles/: deep_finance_agent.md
research_progress/example_09_rstar_aime/results/: experiment_log.md
rl_auto_research/: opencode_runner.py
rl_auto_research/blueprint_runner/: __init__.py  base.py  blueprint_runner.py  pai_runner.py  scan_jobs.py  ssh_runner.py  stop_jobs.py
rl_auto_research/experiment_worker/: __init__.py
rl_auto_research/pai/: client.py
rl_auto_research/utils/: pty.py  smart_daemon.py
skills/: leader_experiment.md  worker_experiment.md
tmp/: tmux_wait.py
(+1 files in other folders)
