[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-auto-research"
version = "0.1.0"
description = "Automated RL research system with leader-worker architecture"
requires-python = ">=3.10"
dependencies = [
    "alibabacloud_tea_openapi",
    "alibabacloud_credentials",
    "alibabacloud_pai_dlc20201203",
    "alibabacloud_aiworkspace20210204",
    "kite-strings",
    "beast_logger",
    "commentjson",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["alpha_auto_research*"]

[tool.setuptools.package-data]
alpha_auto_research = ["skills/*.md"]

[project.scripts]
alpha-rl-research = "alpha_auto_research.opencode_runner:main"
alpha-run-blueprint = "alpha_auto_research.blueprint_runner.blueprint_runner:run_blueprint"
alpha-scan-jobs = "alpha_auto_research.blueprint_runner.scan_jobs:main"
alpha-stop-jobs = "alpha_auto_research.blueprint_runner.stop_jobs:main"

# Convenience aliases matching begin_research.bash
alpha-new-plan = "alpha_auto_research.cli:new_planning"
alpha-resume-plan = "alpha_auto_research.cli:resume_planning"
alpha-resume = "alpha_auto_research.cli:resume_experiment"
alpha-auto = "alpha_auto_research.cli:fully_auto"
beta = "alpha_auto_research.cli:beta"

# general_runner (unified — supports --backend claude/opencode)
alpha-rl-general = "alpha_auto_research.general_runner:main"
alpha-g-new-plan = "alpha_auto_research.cli_general:new_planning"
alpha-g-resume-plan = "alpha_auto_research.cli_general:resume_planning"
alpha-g-resume = "alpha_auto_research.cli_general:resume_experiment"
alpha-g-auto = "alpha_auto_research.cli_general:fully_auto"
